# axiam-cplusplus-sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  axiam_8hpp.html  axiam_8hpp_source.html  classaxiam_1_1AuthError-members.html  classaxiam_1_1AuthError.html  classaxiam_1_1AuthzError-members.html  classaxiam_1_1AuthzError.html  classaxiam_1_1AxiamError-members.html  classaxiam_1_1AxiamError.html  classaxiam_1_1AxiamGuard-members.html  classaxiam_1_1AxiamGuard.html  classaxiam_1_1Client-members.html  classaxiam_1_1Client.html  classaxiam_1_1Client_1_1Builder-members.html  classaxiam_1_1Client_1_1Builder.html  classaxiam_1_1CurlTransport-members.html  classaxiam_1_1CurlTransport.html  classaxiam_1_1JwksVerifier-members.html  classaxiam_1_1JwksVerifier.html  classaxiam_1_1NetworkError-members.html  classaxiam_1_1NetworkError.html  classaxiam_1_1Sensitive-members.html  classaxiam_1_1Sensitive.html  classes.html  client_8hpp.html  client_8hpp_source.html  conanfile.py  dir_94436b1b4b45cc335253143ec7e1b319.html  dir_d44c64559bbebec7f509842c48db8b23.html  errors_8hpp.html  errors_8hpp_source.html  files.html  functions.html  functions_func.html  (+54 more)
.github/workflows/: coverage.yml  docs.yml  sdk-ci-cpp.yml
cmake/: axiam-cpp-sdkConfig.cmake.in
examples/: CMakeLists.txt  README.md  login_mfa.cpp  rest_authz.cpp
include/axiam/: axiam.hpp  client.hpp  errors.hpp  guard.hpp  http_curl.hpp  jwks.hpp  sensitive.hpp  transport.hpp  types.hpp
ports/axiam-cpp-sdk/: portfile.cmake  vcpkg.json
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  files_0.js  files_4.js  (+44 more)
src/: client.cpp  http_curl.cpp  jwks.cpp
tests/: CMakeLists.txt  fake_transport.hpp  main.cpp  test_builder.cpp  test_client.cpp  test_errors.cpp  test_guard.cpp  test_integration_curl.cpp  test_jwks.cpp  test_sensitive.cpp  test_single_flight.cpp
